chore: make separate containers for position and transform approaches

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
         <div class="squares">
             <div>
                 <h2>Спосіб 1 – position</h2>
-                <div class="container position">
+                <div class="container-pos position">
                     <div class="square orange"></div>
                     <div class="square pink"></div>
                 </div>
             </div>
             <div>
                 <h2>Спосіб 2 – transform</h2>
-                <div class="container transform">
+                <div class="container-trans transform">
                     <div class="square orange"></div>
                     <div class="square pink transform-square"></div>
                 </div>
